// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge examples > Default negative badge should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-critical"
  >
    <svg
      aria-hidden="true"
      aria-label="error"
      class="v-icon v-icon-visa v-icon-tiny v-icon-error"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
      />
      <path
        class="v-icon-primary"
        d="M8 10C8.55228 10 9 10.4477 9 11C9 11.5523 8.55228 12 8 12C7.44772 12 7 11.5523 7 11C7 10.4477 7.44772 10 8 10ZM9 8H7V4H9V8Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Label
  </div>
</div>
`;

exports[`Badge examples > Default neutral badge should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-neutral"
  >
    <svg
      aria-hidden="true"
      aria-label="information"
      class="v-icon v-icon-visa v-icon-tiny v-icon-information"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM6 7V9H7V11H6V13H10V11H9V7H6ZM7 3V5H9V3H7Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Label
  </div>
</div>
`;

exports[`Badge examples > Default positive badge should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-stable"
  >
    <svg
      aria-hidden="true"
      aria-label="success"
      class="v-icon v-icon-visa v-icon-tiny v-icon-success"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M8 0C9.30716 0 10.5403 0.315171 11.6299 0.871094L10.1162 2.38477C9.45802 2.13659 8.74502 2 8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 7.78891 13.9881 7.58047 13.9668 7.375L15.6768 5.75C15.8857 6.46393 16 7.21854 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0Z"
      />
      <path
        class="v-icon-primary"
        d="M15 3.46582L7.72852 10.9961L5 8.18262L6.42578 6.71289L7.72852 8.05664L13.5742 1.99609L15 3.46582Z"
      />
    </svg>
     Label
  </div>
</div>
`;

exports[`Badge examples > Default subtle badge should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-subtle"
  >
    <svg
      aria-hidden="true"
      aria-label="history"
      class="v-icon v-icon-visa v-icon-tiny v-icon-history"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M9 7.19531L10.4697 6.27734L11.5303 7.97266L7 10.8047V4H9V7.19531Z"
      />
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16V14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2C4.68629 2 2 4.68629 2 8C2 9.77573 2.77224 11.3714 4 12.4707V11H6V16H1V14H2.70898C1.04865 12.5348 0 10.3905 0 8C0 3.58172 3.58172 0 8 0Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Label
  </div>
</div>
`;

exports[`Badge examples > Default warning badge should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-warning"
  >
    <svg
      aria-hidden="true"
      aria-label="warning"
      class="v-icon v-icon-visa v-icon-tiny v-icon-warning"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M9 10H7V8H9V10Z"
      />
      <path
        class="v-icon-primary"
        d="M15.8643 12.4961L15.001 14H1.00098L0.136719 12.4961L7.13672 0.496094H8.86426L15.8643 12.4961ZM2.74121 12H13.2598L8.00098 2.98438L2.74121 12Z"
      />
    </svg>
     Label
  </div>
</div>
`;

exports[`Badge examples > Negative badge with indicator should render correctly 1`] = `
<div>
  <div
    aria-label="error"
    class="v-badge v-badge-critical"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-ellipse"
      height="16"
      style="--v-icon-height: var(--size-scalable-8); --v-icon-width: var(--size-scalable-8);"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
    </svg>
    Label
  </div>
</div>
`;

exports[`Badge examples > Negative badge without background should render correctly 1`] = `
<div>
  <div
    aria-label="error"
    class="v-badge v-badge-critical v-badge-clear"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-ellipse"
      height="16"
      style="--v-icon-height: var(--size-scalable-8); --v-icon-width: var(--size-scalable-8);"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
    </svg>
    Label
  </div>
</div>
`;

exports[`Badge examples > Negative badge without icon should render correctly 1`] = `
<div>
  <div
    aria-label="error"
    class="v-badge v-badge-critical"
  >
    Label
  </div>
</div>
`;

exports[`Badge examples > Negative icon badge with background should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-icon v-badge-critical"
  >
    <svg
      aria-hidden="true"
      aria-label="error"
      class="v-icon v-icon-visa v-icon-tiny v-icon-error-alt"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        d="M8 13C8.55228 13 9 13.4477 9 14C9 14.5523 8.55228 15 8 15C7.44772 15 7 14.5523 7 14C7 13.4477 7.44772 13 8 13ZM9 11H7V1H9V11Z"
      />
    </svg>
  </div>
</div>
`;

exports[`Badge examples > Negative icon badge without background should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-icon v-badge-critical v-badge-clear"
  >
    <svg
      aria-hidden="true"
      aria-label="error"
      class="v-icon v-icon-visa v-icon-tiny v-icon-error-alt"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        d="M8 13C8.55228 13 9 13.4477 9 14C9 14.5523 8.55228 15 8 15C7.44772 15 7 14.5523 7 14C7 13.4477 7.44772 13 8 13ZM9 11H7V1H9V11Z"
      />
    </svg>
  </div>
</div>
`;

exports[`Badge examples > Neutral badge icon without background should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-icon v-badge-neutral v-badge-clear"
  >
    <svg
      aria-hidden="true"
      aria-label="information"
      class="v-icon v-icon-visa v-icon-tiny v-icon-information"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM6 7V9H7V11H6V13H10V11H9V7H6ZM7 3V5H9V3H7Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`Badge examples > Neutral badge with indicator should render correctly 1`] = `
<div>
  <div
    aria-label="information"
    class="v-badge v-badge-neutral"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-ellipse"
      height="16"
      style="--v-icon-height: var(--size-scalable-8); --v-icon-width: var(--size-scalable-8);"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
    </svg>
    Label
  </div>
</div>
`;

exports[`Badge examples > Neutral badge without background should render correctly 1`] = `
<div>
  <div
    aria-label="information"
    class="v-badge v-badge-neutral v-badge-clear"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-ellipse"
      height="16"
      style="--v-icon-height: var(--size-scalable-8); --v-icon-width: var(--size-scalable-8);"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
    </svg>
    Label
  </div>
</div>
`;

exports[`Badge examples > Neutral badge without icon should render correctly 1`] = `
<div>
  <div
    aria-label="information"
    class="v-badge v-badge-neutral"
  >
    Label
  </div>
</div>
`;

exports[`Badge examples > Neutral icon badge should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-icon v-badge-neutral"
  >
    <svg
      aria-hidden="true"
      aria-label="information"
      class="v-icon v-icon-visa v-icon-tiny v-icon-information"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM6 7V9H7V11H6V13H10V11H9V7H6ZM7 3V5H9V3H7Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`Badge examples > Positive badge with indicator should render correctly 1`] = `
<div>
  <div
    aria-label="success"
    class="v-badge v-badge-stable"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-ellipse"
      height="16"
      style="--v-icon-height: var(--size-scalable-8); --v-icon-width: var(--size-scalable-8);"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
    </svg>
    Label
  </div>
</div>
`;

exports[`Badge examples > Positive badge without background should render correctly 1`] = `
<div>
  <div
    aria-label="success"
    class="v-badge v-badge-stable v-badge-clear"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-ellipse"
      height="16"
      style="--v-icon-height: var(--size-scalable-8); --v-icon-width: var(--size-scalable-8);"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
    </svg>
    Label
  </div>
</div>
`;

exports[`Badge examples > Positive badge without icon should render correctly 1`] = `
<div>
  <div
    aria-label="success"
    class="v-badge v-badge-stable"
  >
    Label
  </div>
</div>
`;

exports[`Badge examples > Positive icon badge with background should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-icon v-badge-stable"
  >
    <svg
      aria-hidden="true"
      aria-label="success"
      class="v-icon v-icon-visa v-icon-tiny v-icon-checkmark"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        d="M15.7441 3.43896L5.03711 14.146L0.330078 9.43896L1.74414 8.0249L5.03711 11.3179L14.3301 2.0249L15.7441 3.43896Z"
      />
    </svg>
  </div>
</div>
`;

exports[`Badge examples > Positive icon badge without background should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-icon v-badge-stable v-badge-clear"
  >
    <svg
      aria-hidden="true"
      aria-label="success"
      class="v-icon v-icon-visa v-icon-tiny v-icon-checkmark"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        d="M15.7441 3.43896L5.03711 14.146L0.330078 9.43896L1.74414 8.0249L5.03711 11.3179L14.3301 2.0249L15.7441 3.43896Z"
      />
    </svg>
  </div>
</div>
`;

exports[`Badge examples > Subtle badge with indicator should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-subtle"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-ellipse"
      height="16"
      style="--v-icon-height: var(--size-scalable-8); --v-icon-width: var(--size-scalable-8);"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
    </svg>
    Label
  </div>
</div>
`;

exports[`Badge examples > Subtle badge without background should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-subtle v-badge-clear"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-ellipse"
      height="16"
      style="--v-icon-height: var(--size-scalable-8); --v-icon-width: var(--size-scalable-8);"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
    </svg>
    Label
  </div>
</div>
`;

exports[`Badge examples > Subtle badge without icon should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-subtle"
  >
    Label
  </div>
</div>
`;

exports[`Badge examples > Warning badge with indicator should render correctly 1`] = `
<div>
  <div
    aria-label="warning"
    class="v-badge v-badge-warning"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-ellipse"
      height="16"
      style="--v-icon-height: var(--size-scalable-8); --v-icon-width: var(--size-scalable-8);"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
    </svg>
    Label
  </div>
</div>
`;

exports[`Badge examples > Warning badge without background should render correctly 1`] = `
<div>
  <div
    aria-label="warning"
    class="v-badge v-badge-warning v-badge-clear"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-tiny v-ellipse"
      height="16"
      style="--v-icon-height: var(--size-scalable-8); --v-icon-width: var(--size-scalable-8);"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
        style="fill: var(--v-badge-ellipse-color);"
      />
    </svg>
    Label
  </div>
</div>
`;

exports[`Badge examples > Warning badge without icon should render correctly 1`] = `
<div>
  <div
    aria-label="warning"
    class="v-badge v-badge-warning"
  >
    Label
  </div>
</div>
`;

exports[`Badge examples > Warning icon badge with background should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-icon v-badge-warning"
  >
    <svg
      aria-hidden="true"
      aria-label="warning"
      class="v-icon v-icon-visa v-icon-tiny v-icon-warning"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M9 10H7V8H9V10Z"
      />
      <path
        class="v-icon-primary"
        d="M15.8643 12.4961L15.001 14H1.00098L0.136719 12.4961L7.13672 0.496094H8.86426L15.8643 12.4961ZM2.74121 12H13.2598L8.00098 2.98438L2.74121 12Z"
      />
    </svg>
  </div>
</div>
`;

exports[`Badge examples > Warning icon badge without background should render correctly 1`] = `
<div>
  <div
    class="v-badge v-badge-icon v-badge-warning v-badge-clear"
  >
    <svg
      aria-hidden="true"
      aria-label="warning"
      class="v-icon v-icon-visa v-icon-tiny v-icon-warning"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M9 10H7V8H9V10Z"
      />
      <path
        class="v-icon-primary"
        d="M15.8643 12.4961L15.001 14H1.00098L0.136719 12.4961L7.13672 0.496094H8.86426L15.8643 12.4961ZM2.74121 12H13.2598L8.00098 2.98438L2.74121 12Z"
      />
    </svg>
  </div>
</div>
`;
